Fix links overflow

--- a/public/custom.css
+++ b/public/custom.css
@@ -124,5 +124,4 @@
   line-height: 63px;
   padding: 0 20px;
   text-align: left;
-  width: 100%;
 }
